# RMA-grupo-2

./: .gitignore  README.md  package-lock.json  package.json
Frontend/fron/: package-lock.json  package.json
backend/: database.py  env  main.py  mensaje.txt  pyproject.toml
backend/src/: auth.py  bot.py  datos.py  models.py  routes.py  schemas.py  services.py
backend/src/generator/: main.py
backend/src/mqtt/: conexion.py
backend/src/rma-generador/: README.md  main.py  routes.py
backend/src/rma-generador/generatorMqtt/: __init__.py  mqtt_messages.txt  pub.py  services.py  sub.py
backend/src/rma-generador/mqtt/: pub.py
backend/src/rma-generador/~/Envs/rma-generador/: pyvenv.cfg
backend/src/rma-generador/~/Envs/rma-generador/Scripts/: activate  activate.bat
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AuthContext.tsx  ProtectedRoute.tsx  app.tsx  datos.ts  main.tsx  svg.d.ts
frontend/src/components/: AlertPopup.tsx  alerts.tsx  popUp.tsx
frontend/src/components/AdminSidebar/: index.tsx
frontend/src/components/Alerts/: AlertMensaje.tsx  AlertPanelNodos.tsx
frontend/src/components/Breadcrumbs/: Breadcrumb.tsx
frontend/src/components/Charts/: ChartLineaTemp.tsx  ChartOne.tsx  ChartSemana.tsx  ChartTwo.tsx  ChartWeek.tsx
frontend/src/css/: AlertPopup.css  style.css
frontend/src/layout/: AdminLayout.tsx  AuthLayout.tsx  DefaultLayout.tsx  InvestigadorLayout.tsx
frontend/src/mqtt/: conexion.py
frontend/src/pages/: Calendar.tsx  Home.css  Home.jsx  Perfil.tsx  Tablas.tsx
(+31 files in other folders)
