[tool.poetry]
name = "poetry-pedido-ahora"
version = "0.1.0"
description = "Proyecto para la materia desarrollo de software"
authors = ["Federico Cabaña <federicogabriel12@hotmail.com>"]
readme = "README.md"   

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.2"}
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
email-validator = "^2.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
aiogram = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
